# mathswithajeesh

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: main.rs
src/maths/: lib.rs
src/maths/comb_optimization/: hungarian.rs  mod.rs
src/maths/comb_optimization/assignment_problem/: assignment_problem.rs  inputs.rs  mod.rs
src/maths/graph_theory/: bipartite.rs  mod.rs
src/web/: inputs.rs  mod.rs
tests/: hungarian.rs
