[package]
name = "mathswithajeesh"
version = "0.1.0"
edition = "2021"

[lib]
name = "maths"
path = "src/maths/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = {version = "0.10.1", default-features = false}
nalgebra = { version = "0.30.1", features = ["serde-serialize"]}
petgraph = { version = "0.6.0", features = ["serde-1"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
state = "0.5.2"
